--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@aws-lambda-powertools/tracer": "^2.24.1",
         "aws-cdk-lib": "2.173.4",
         "constructs": "^10.0.0",
+        "mongodb": "^6.21.0",
         "openai": "^5.10.2",
         "pg": "^8.16.3"
     }
